# SMAQ

./: .gitignore  CNAME  LICENSE  README.md  SMAQ.pptx  package-lock.json
Hardware/: README.md
Hardware/3D Files/: README.md
Hardware/Board Assembly/: README.md  SMAQ-Board_DesignBOM.xlsx
Hardware/Casing/: Casing_Top_Half.stl  LED_Pipe.stl  Meshed_Panel.stl
Hardware/PCB Manufacturing/: README.md
Hardware/PCB Manufacturing/Gerber Output/: PCB_Design_SMAQ-macro.APR_LIB  PCB_Design_SMAQ.EXTREP  PCB_Design_SMAQ.GBL  PCB_Design_SMAQ.GBO  PCB_Design_SMAQ.GBS  PCB_Design_SMAQ.GM1  PCB_Design_SMAQ.GM29  PCB_Design_SMAQ.GTL  PCB_Design_SMAQ.GTO  PCB_Design_SMAQ.GTP  PCB_Design_SMAQ.GTS  PCB_Design_SMAQ.REP  PCB_Design_SMAQ.RUL  PCB_Design_SMAQ.apr  README.md
Hardware/PCB Manufacturing/NC Drill Output/: PCB_Design_SMAQ.DRR  PCB_Design_SMAQ.LDP  PCB_Design_SMAQ.TXT  README.md
Hardware/PCB Manufacturing/Pick and Place/: PickandPlace.txt
Hardware/Schematics/: README.md
Hardware/Source Files/: A2_Full_Schematic.SchDoc  Parts_Lib_SMAQ.SchLib  Pcb_Lib_SMAQ.PcbLib  SMAQ-Board_Design.PrjPcb  SMAQ_PCB_Draftsman.PCBDwf  Source Files Description  [1] - Layout Information.SchDoc  [2] - Header and I2C.SchDoc  [3] - Gas Sensor and ADC.SchDoc  [4] - Proximity,Temperature Sensors and OLED.SchDoc  [5] - Microphone, Sound and LEDs.SchDoc  [6] - A2 Full Schematic.SchDoc
Hardware/Source Files/3D Models/: 30Pin.SLDPRT  TQFN16-1.STEP  User Library-128x64I2COLEDDisplayAdafruit.step  User Library-Bosch_BME280.step  User Library-DGS0010A.STEP  User Library-MICS-4514.step  User Library-so8-3.step  VCNL4010.STEP
Hardware/Source Files/ActiveBOM/: SMAQ-Board_Design.BomDoc
Resources/: README.md
Software/: README.md
Software/Android-App/: settings.gradle
Software/Android-App-Dev/: Activity_main.xml  MainActivity.java  README.txt  StarterApplication.java  gradleModule
Software/Android-App/app/: build.gradle
Software/Real-Time/: .gitignore  ADS1115.cpp  ADS1115.h  BME280.cpp  BME280.h  CMakeLists.txt  SH1106.cpp  SH1106.h  VCNL4010.cpp  VCNL4010.h  demo.cpp  fonts.h  sampler.cpp  sampler.h  testingStuff.cpp  udp_transmit.cpp  unitTest.cpp
Software/Website/: alerts.js  app.js  contact.js  email.js  example-config.env.txt  fakeDataGenerator.js  gauge.js  package-lock.json  package.json  plot.js  postHandler.js  router.js  settings.js  testAlerts.js  udp_receive.js  writetoAlerts.js  writetoCSV.js
Software/Website/backend/: package-lock.json  (+2 more)
(+52 files in other folders)
